syntax = "proto3";

package tracer_study_grpc;
option go_package = "./;pb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message KabKota {
    string id_wil = 1;
    string nama = 2;
    string id_induk_wilayah = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
    google.protobuf.Timestamp deleted_at = 6;
}

message GetAllKabKotaResponse {
    uint32 code = 1;
    string message = 2;
    repeated KabKota data = 3;
}

message GetKabKotaByIdWilRequest {
    string id_wil = 1;
}

message GetKabKotaResponse {
    uint32 code = 1;
    string message = 2;
    KabKota data = 3;
}

service KabKotaService {
    rpc GetAllKabKota(google.protobuf.Empty) returns (GetAllKabKotaResponse) {};
    rpc GetKabKotaByIdWil(GetKabKotaByIdWilRequest) returns (GetKabKotaResponse) {};
    rpc CreateKabKota(KabKota) returns (GetKabKotaResponse) {};
    rpc UpdateKabKota(KabKota) returns (GetKabKotaResponse) {};
    rpc DeleteKabKota(GetKabKotaByIdWilRequest) returns (GetKabKotaResponse) {};
}